<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="accept">Accept</string>
    <string name="app_name">Prey</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_find_your_QR">"Visit panel.preyproject.com/qr
 on your computer an scan the QR code"</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="button_signin">ACCESS TO MY ACCOUNT</string>
    <string name="button_signup">CREATE MY NEW ACCOUNT</string>
    <string name="cancel">Cancel</string>
    <string name="ccontinue">Continue</string>
    <string name="create_my_account">CREATE MY ACCOUNT!</string>
    <string name="creating_account_please_wait">Creating account. Please wait…</string>
    <string name="device_added_congratulations_text">You have successfully associated this device with your Prey account. Now take a minute to set it up.</string>
    <string name="field_email_signup">email</string>
    <string name="field_name_signup">username</string>
    <string name="field_password_signup">password</string>
    <string name="link_signup">already have an account?</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="password_button">SIGN IN</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="password_hint">Type in your password</string>
    <string name="password_subtitle">For your safety, enter your password, to manage device settings.</string>
    <string name="preference_pin">Prey security PIN</string>
    <string name="preference_pin_dialog_title">Set you Prey security PIN</string>
    <string name="preference_pin_summary">It is a four digit code required to use the SMS commands enable you to perform actions on your device remotely by sending instructions via a text message</string>
    <string name="preference_sms">SMS commands</string>
    <string name="preference_sms_category_available">Available commands</string>
    <string name="preference_sms_category_title">SMS</string>
    <string name="preference_sms_checkbox_summary">Send a text message to your phone with the command you need and action is activated on your device</string>
    <string name="preference_sms_checkbox_title">Enable SMS commands</string>
    <string name="preference_sms_command_alarm">prey PIN alarm</string>
    <string name="preference_sms_command_alarm_summary">Will sound an alarm</string>
    <string name="preference_sms_command_alert">prey PIN alert some_text</string>
    <string name="preference_sms_command_alert_summary">Will show some_text as a system notification</string>
    <string name="preference_sms_command_location">prey PIN location phone_number</string>
    <string name="preference_sms_command_location_summary">Will return the device’s geolocation via SMS to phone_number</string>
    <string name="preference_sms_command_lock">prey PIN lock lock_PIN</string>
    <string name="preference_sms_command_lock_summary">Will lock the device’s screen until lock_PIN is entered.</string>
    <string name="preference_sms_command_unlock">prey PIN unlock</string>
    <string name="preference_sms_command_unlock_summary">Will force unlock your device’s screen. It’s perfect for forgotten passwords!</string>
    <string name="preference_sms_summary">It allows execute actions on your device remotely by sending instructions via a text message</string>
    <string name="preferences_about">Prey for Android™</string>
    <string name="preferences_about_category_name">About</string>
    <string name="preferences_about_message">Prey for Android™</string>
    <string name="preferences_about_title">Prey for Android™</string>
    <string name="preferences_config_title">Manage Your Devices</string>
    <string name="preferences_detach_dialog_message">"Your device will be detached from the Control Panel. This will also delete all its stored reports.

Are you sure?"</string>
    <string name="preferences_detach_dialog_title">Detaching device</string>
    <string name="preferences_detach_summary">Deletes this device from your Prey account</string>
    <string name="preferences_detach_title">Detach device</string>
    <string name="preferences_disable_power_options_summary">"Your device can't be turned off if its screen is locked"</string>
    <string name="preferences_disable_power_options_title">Disable Power Menu</string>
    <string name="preferences_go_to_control_panel_summary">Go to your Prey account</string>
    <string name="preferences_go_to_control_panel_title">Manage Your Devices</string>
    <string name="preferences_password_confirm">Confirm password</string>
    <string name="preferences_password_new">New password</string>
    <string name="preferences_password_old">Current password</string>
    <string name="preferences_scheduled_summary">How often Prey will run if no Google Services are available</string>
    <string name="preferences_scheduled_title">Set interval frequency</string>
    <string name="protect_button_subtitle_1">PREY ACCOUNT</string>
    <string name="protect_button_subtitle_2">PREY SETTINGS</string>
    <string name="protect_button_title_1">REMOTE CONTROL FROM YOUR</string>
    <string name="protect_button_title_2">CONFIGURE</string>
    <string name="protect_title_1">current device status</string>
    <string name="protect_title_2">PROTECTED</string>
    <string name="protect_title_3">Take the tour</string>
    <string name="protect_title_4">What can Prey do for you...</string>
    <string name="protect_title_5">How to uninstall Prey</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="signup_subtitle">prey account</string>
    <string name="signup_title">SIGN UP</string>
    <string name="use_flash">Use Flash</string>
    <string name="yes">Yes</string>
</resources>