<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name" android:key="PREFS_APP">
        <Preference android:title="@string/preferences_go_to_control_panel_title" android:key="PREFS_GOTO_WEB_CONTROL_PANEL" android:summary="@string/preferences_go_to_control_panel_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_config_title" android:key="PREFS_CAT_PREFS">
        <com.prey.preferences.ChangePinPreferences android:title="@string/preference_pin" android:key="PREFS_CHANGE_PIN" android:summary="@string/preference_pin_summary" android:dialogTitle="@string/preference_pin_dialog_title" android:dialogIcon="@drawable/logo" android:positiveButtonText="@string/ok" android:negativeButtonText="@string/cancel" />
        <Preference android:title="@string/preference_sms" android:key="PREFS_SMS" android:summary="@string/preference_sms_summary" />
        <com.prey.preferences.DisablePowerCheckBoxPreference android:title="@string/preferences_disable_power_options_title" android:key="PREFS_DISABLE_POWER" android:summary="@string/preferences_disable_power_options_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/listScheduledEntries" android:title="@string/preferences_scheduled_title" android:key="PREFS_SCHEDULED" android:summary="@string/preferences_scheduled_summary" android:entryValues="@array/listScheduledValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_detach_title">
        <com.prey.preferences.DetachDevicePreferences android:title="@string/preferences_detach_title" android:key="PREFS_DETACH" android:summary="@string/preferences_detach_summary" android:dialogTitle="@string/preferences_detach_dialog_title" android:dialogMessage="@string/preferences_detach_dialog_message" android:dialogIcon="@drawable/logo" android:positiveButtonText="@string/yes" android:negativeButtonText="@string/no" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_about_category_name">
        <EditTextPreference android:title="@string/preferences_about" android:selectable="false" android:key="PREFS_ABOUT" android:summary="" android:dialogTitle="@string/preferences_about_title" android:dialogMessage="@string/preferences_about_message" android:dialogIcon="@drawable/logo" android:positiveButtonText="@string/ok" />
    </PreferenceCategory>
</PreferenceScreen>