<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/bg_w" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/textViewInit1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/signup_subtitle" android:layout_above="@id/textViewInit2" />
    <TextView android:textSize="23.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/textViewInit2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/signup_title" android:layout_above="@id/editTextName" />
    <EditText android:textColor="#ff000000" android:textColorHint="#ff9d9c96" android:id="@id/editTextName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/field_name_signup" android:ems="10" android:layout_above="@id/editTextEmailAddress" android:inputType="text" />
    <EditText android:textColor="#ff000000" android:textColorHint="#ff9d9c96" android:id="@id/editTextEmailAddress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/field_email_signup" android:ems="10" android:layout_above="@id/editTextPassword" android:inputType="textEmailAddress" />
    <EditText android:textColor="#ff000000" android:textColorHint="#ff9d9c96" android:id="@id/editTextPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:hint="@string/field_password_signup" android:ems="10" android:layout_above="@id/buttonSignup" android:inputType="textPassword" />
    <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/buttonSignup" android:background="#ff3578bb" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_signup" android:layout_above="@id/linkSignup" />
    <TextView android:textStyle="bold" android:textColor="#ff3c77b9" android:gravity="left" android:id="@id/linkSignup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/link_signup" android:layout_alignRight="@id/buttonSignup" android:layout_alignParentBottom="true" />
</RelativeLayout>