<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/status_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/barcode_header" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/barcode_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="110.0dip" android:layout_below="@id/status_message" android:layout_alignRight="@id/status_message" android:layout_alignParentLeft="true" />
    <Button android:id="@id/read_barcode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_barcode" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <CheckBox android:id="@id/auto_focus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="66.0dip" android:checked="false" android:text="@string/auto_focus" android:layout_below="@id/barcode_value" android:layout_alignParentLeft="true" />
    <CheckBox android:id="@id/use_flash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/use_flash" android:layout_alignTop="@id/auto_focus" android:layout_alignParentRight="true" />
</RelativeLayout>