<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ff1e2938" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/imgViewPrey" android:layout_width="120.0dip" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:src="@drawable/prey_logo_b_mono2" />
    <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="300.0dip" android:weightSum="1.0" android:layout_alignRight="@id/linearLayout3" android:layout_alignParentTop="true">
        <ImageView android:id="@id/imgViewPrey2" android:layout_width="191.0dip" android:layout_height="fill_parent" android:src="@drawable/native_protected" android:layout_alignBottom="@id/textView2" android:layout_alignParentTop="true" />
    </LinearLayout>
    <TextView android:textSize="11.0sp" android:textStyle="bold" android:textColor="#ffefeae8" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="140.0dip" android:layout_marginRight="10.0dip" android:text="@string/protect_title_1" android:layout_alignParentLeft="true" />
    <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ff23b37f" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="50.0dip" android:text="@string/protect_title_2" android:layout_below="@id/textView1" android:layout_alignParentLeft="true" />
    <EditText android:textColor="#ff000000" android:textColorHint="#ff9d9c96" android:id="@id/password_pass_txt" android:background="#ffffffff" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/password_hint" android:layout_above="@id/device_ready_h2_text" android:inputType="textPassword">
        <requestFocus />
    </EditText>
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="left" android:id="@id/device_ready_h2_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/password_subtitle" android:layout_above="@id/password_btn_login" />
    <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/password_btn_login" android:background="#ff3578bb" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/password_button" android:layout_above="@id/link_forgot_password" android:layout_centerHorizontal="true" />
    <TextView android:textSize="15.0sp" android:textColor="#ff3578bb" android:gravity="left" android:id="@id/link_forgot_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="70.0dip" android:text="@string/password_forgot" android:layout_above="@id/textView6" android:layout_alignParentBottom="true" />
    <TextView android:textSize="15.0sp" android:textColor="#ff3578bb" android:gravity="left" android:id="@id/textViewUninstall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="30.0dip" android:text="@string/protect_title_5" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayoutTour" android:background="#ffd19d23" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentBottom="true">
        <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/icon_info" />
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout3_1" android:layout_width="250.0dip" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="#ff1e2938" android:id="@id/textView5_1" android:layout_width="234.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/protect_title_3" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff1e2938" android:id="@id/textView5_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="10.0dip" android:text="@string/protect_title_4" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout3_2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="right" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/black_close" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>