<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/preferences_password_old" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/old_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:maxLines="1" android:scrollHorizontally="true" android:inputType="textPassword" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/preferences_password_new" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:maxLines="1" android:scrollHorizontally="true" android:inputType="textPassword" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/preferences_password_confirm" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/password_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:maxLines="1" android:scrollHorizontally="true" android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>